--- a/webapp/src/components/RangeFilter.module.scss
+++ b/webapp/src/components/RangeFilter.module.scss
@@ -78,18 +78,14 @@
             left: 0;
             z-index: 3;
 
-            appearance: none;
-            -webkit-appearance: none;
-            /* Hides the slider so that custom slider can be made */
             width: 100%;
             height: 100%;
-            /* Specific width is required for Firefox. */
-            background: transparent;
-            /* Otherwise white in Chrome */
 
+            background: none;
             pointer-events: none;
-            cursor: pointer;
-
+            -moz-pointer-events: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
 
             // appearance: none;
             // -webkit-appearance: none;
@@ -102,9 +98,9 @@
             // background-size: 70% 100%;
             // background-repeat: no-repeat;
 
+            &::-webkit-slider-thumb,
             &::-moz-range-thumb {
-                -webkit-appearance: none;
-
+                // -webkit-appearance: none;
                 height: 14px;
                 width: 14px;
                 aspect-ratio: 1;
@@ -118,7 +114,21 @@
                 // transform: translateX(-50%);
 
                 // pointer-events: auto;
-                pointer-events: all;
+                // pointer-events: all;
+            }
+
+
+            &::-webkit-slider-thumb {
+                pointer-events: auto;
+                -moz-appearance: none;
+                cursor: pointer;
+
+            }
+
+            &::-moz-range-thumb {
+                pointer-events: auto;
+                -moz-appearance: none;
+                cursor: pointer;
             }
 
             &::-webkit-slider-runnable-track,
@@ -130,11 +140,9 @@
                 border: none;
                 background: transparent;
 
-                pointer-events: none;
-                pointer-events: all;
+                // pointer-events: none;
+                // pointer-events: all;
             }
-
-            &:first-child {}
         }
     }
 
