--- a/webapp/src/components/Sidebar.module.scss
+++ b/webapp/src/components/Sidebar.module.scss
@@ -13,15 +13,20 @@
     z-index: 3;
     // padding-right: 10px;
     position: relative;
-    margin-top: calc(-1 * constants.$header-height);
-    padding-top: constants.$header-height;
-    left: 0;
+    // margin-top: calc(-1 * constants.$header-height);
+    // padding-top: constants.$header-height;
+    // left: 0;
 
+    height: 100%;
+    overflow: auto;
+
+    /*
     min-height: 100vh;
     min-height: -webkit-fill-available;
 
     max-height: 100vh;
     max-height: -webkit-fill-available;
+    */
 
     transition: all 300ms;
 
