--- a/webapp/src/pages/index.module.scss
+++ b/webapp/src/pages/index.module.scss
@@ -10,8 +10,6 @@
     .horizontal_layout {
         // height: 100%;
         // min-height: calc(100% - constants.$header-height);
-        padding-top: constants.$header-height;
-        position: relative;
 
         // min-height: 100vh;
         // min-height: -webkit-fill-available;
@@ -23,6 +21,10 @@
         left: 0;
         // top: constants.$header-height;
         width: 100vw;
+
+        position: fixed;
+        top: constants.$header-height;
+        left: 0;
 
         // On mobile, always show the sidebar
         @media screen and (min-width: 960px) {
