--- a/webapp/src/pages/index.module.scss
+++ b/webapp/src/pages/index.module.scss
@@ -13,7 +13,8 @@
 
         // min-height: 100vh;
         // min-height: -webkit-fill-available;
-        height: 100%;
+        // height: 100%;
+        height: calc(100% - 3rem);
 
         display: flex;
         position: fixed;
