--- a/webapp/src/components/RangeFilter.module.scss
+++ b/webapp/src/components/RangeFilter.module.scss
@@ -8,8 +8,8 @@
         width: 100%;
         display: grid;
         align-items: center;
-        grid-template-columns: 2em 1fr 2em;
-        gap: .2em;
+        grid-template-columns: 2.5em 1fr 2.5em;
+        gap: .5em;
     }
 
     .label_range_minmax {
@@ -159,17 +159,17 @@
     }
 
     input[type=number] {
-        font-size: 0.9em;
-        // max-width: 5em;
-        // border: 1px solid #ddd;
-        // padding: .2em .4em;
-        // border-radius: 4px;
         background: none;
         border: none;
         text-align: center;
-        // color: colors.$sidebar-text;
         color: white;
-        // background-color: colors.$filter-bg;
+
+        background-color: colors.$filter-bg;
+        color: colors.$sidebar-text;
+        height: 1.5em;
+        border-radius: 1.5em;
+        width: 100%;
+        font-size: 0.9em;
 
         // Hide spinbox
         appearance: textfield;
