--- a/webapp/src/components/RangeFilter.module.scss
+++ b/webapp/src/components/RangeFilter.module.scss
@@ -8,8 +8,8 @@
         width: 100%;
         display: grid;
         align-items: center;
-        grid-template-columns: 2.5em 1fr 2.5em;
-        gap: .5em;
+        grid-template-columns: 3em 1fr 3em;
+        // gap: .5em;
     }
 
     .label_range_minmax {
@@ -168,14 +168,15 @@
         color: colors.$sidebar-text;
         height: 1.5em;
         border-radius: 1.5em;
-        width: 100%;
+        // width: 100%;
+        width: 2.5em;
         font-size: 0.9em;
+        margin: 0 auto;
 
         // Hide spinbox
         appearance: textfield;
         -moz-appearance: textfield;
         -webkit-appearance: textfield;
-        margin: 0;
 
         // Hide spinbox on chrome/safari
         &::-webkit-inner-spin-button {
