--- a/webapp/src/components/viewer/SelectedCasePanel.module.scss
+++ b/webapp/src/components/viewer/SelectedCasePanel.module.scss
@@ -3,7 +3,7 @@
     position: absolute;
     top: 50px;
     right: 10px;
-    max-height: 90%;
+    max-height: calc(95% - 50px);
     max-width: min(50%, 20rem);
     background-color: rgba($color: black, $alpha: 0.5);
     padding: 10px;
@@ -13,6 +13,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @media screen and (max-width: 600px) {
+        display: none;
+    }
 
     tr {
         border-bottom: 1px solid #444;
