--- a/webapp/src/components/viewer/Viewer.module.scss
+++ b/webapp/src/components/viewer/Viewer.module.scss
@@ -19,7 +19,7 @@
     }
 }
 
-.buttons_top_left {
+.buttons_top_right {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -67,6 +67,7 @@
 .selected_cases_list {
     // width: 10em;
     max-height: 90%;
+    max-width: min(50%, 20rem);
     color: white;
     position: absolute;
     top: 10px;
@@ -106,7 +107,8 @@
         }
 
         label {
-            margin-right: auto;
+            // margin-right: auto;
+            width: 100%;
             cursor: pointer;
         }
 
