--- a/webapp/src/components/viewer/Viewer.module.scss
+++ b/webapp/src/components/viewer/Viewer.module.scss
@@ -143,8 +143,15 @@
         justify-content: center;
         font-size: .9em;
         display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
 
-        select {
+        button {
+            cursor: pointer;
+        }
+
+        label.select_sort {
             height: 1.5em;
             border: none;
             background-color: colors.$bg-interactive;
@@ -153,7 +160,16 @@
             padding: 0 .5em;
             margin: .5em;
             font-size: 0.9em;
-            cursor: pointer;
+            display: flex;
+            align-items: center;
+
+            select {
+                border: none;
+                background: none;
+                color: inherit;
+                font-size: inherit;
+                cursor: pointer;
+            }
         }
     }
 }
