--- a/webapp/src/styles/colors.scss
+++ b/webapp/src/styles/colors.scss
@@ -1,6 +1,7 @@
 /* Color-based definitions (use them only in this file!) */
 
 $darkblue: #2B2D42; // dark bg
+$deepblue: #313146;
 $darkblue: #2B2D42; // light bg
 $lightblue: #478ec5ff; // for buttons and other interactive elements
 $darkerblue: #3a76a4; // for buttons and other interactive elements
